FIXED: includes error

--- a/application/CMakeLists.template
+++ b/application/CMakeLists.template
@@ -43,8 +43,8 @@ target_sources(${NAME} PRIVATE
 
 message("Linking SDL Libs")
 
-target_link_includes(${NAME} PRIVATE ./src/external/SDL3/include)
-target_link_includes(${NAME} PRIVATE ./src/external/SDL3image/include)
+target_include_directories(${NAME} PRIVATE ./src/external/SDL3/include)
+target_include_directories(${NAME} PRIVATE ./src/external/SDL3image/include)
 
 target_link_libraries(${NAME} PRIVATE SDL3::SDL3)
 target_link_libraries(${NAME} PRIVATE SDL3_image::SDL3_image)
