--- a/application/CMakeLists.template
+++ b/application/CMakeLists.template
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.2)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 set(PROJECT_DIR "src/project") 
 set(NAME project_name)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_STANDARD 20)
 
 message("${ERROR_OUTPUT}")
 
@@ -29,7 +31,16 @@ FetchContent_Declare(
     SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/external/SDL3image"
 )
 
-FetchContent_MakeAvailable(SDL SDLImage)
+message("Ensuring Json Parser is installed")
+
+FetchContent_Declare(
+    Json
+    GIT_REPOSITORY "https://github.com/nlohmann/json"
+    GIT_TAG "origin/master"
+    SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/external/Json"
+)
+
+FetchContent_MakeAvailable(SDL SDLImage Json)
 
 add_executable(${NAME}) 
 
@@ -45,14 +56,16 @@ message("Linking SDL Libs")
 
 target_include_directories(${NAME} PRIVATE ./src/external/SDL3/include)
 target_include_directories(${NAME} PRIVATE ./src/external/SDL3image/include)
+target_include_directories(${NAME} PRIVATE ./src/external/Json/include)
+
+target_include_directories(${NAME} PRIVATE ./src/project/includes)
 
 target_link_libraries(${NAME} PRIVATE SDL3::SDL3)
 target_link_libraries(${NAME} PRIVATE SDL3_image::SDL3_image)
+target_link_libraries(${NAME} PRIVATE nlohmann_json)
 
 message("Copying Assets")
 
 file(COPY "${CMAKE_SOURCE_DIR}/${PROJECT_DIR}/assets/"
     DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets/"
 )
-
-
